# 2019-DAT109-Modelldrevet-utvikling-16

./: README.md
Bookstore/: .project
Bookstore/Model/DataModel/: Properties.wr
Bookstore/Model/WebModel/sv1/: Properties.wr  page2.wr  page3.wr  page4.wr
Bookstore/Model/WebModel/sv2/: Properties.wr  page10.wr  page9.wr
Bookstore/test_bookstore/: .project
EXPO/: .project  Model.wr
EXPO/Model/DataModel/: Properties.wr
EXPO/Model/WebModel/mov1/opm1/: Properties.wr
EXPO/Model/WebModel/sv1/: Properties.wr
EXPO/Model/WebModel/sv1/area2/: Properties.wr  page3.wr  page4.wr  page5.wr
UMPLE/: Domenemodell.txt  Forskjell på kodene.txt
UMPLE/Domenemodell/C++/RTCpp/: CMakeLists.txt  model_Main.cpp  model_Model.h
UMPLE/Domenemodell/Java/: Arrengement.java  Bedrift.java  Brukegruppe.java  Bruker.java  Prosjekt.java  Stemme.java
UMPLE/Domenemodell/Php/Php/: Prosjekt.php
UMPLE/Java/: Arrangementdeltagelse.java  Kategori.java  Stemmemetode.java  Studie.java
UMPLE/Sql/Sql/: model.sql
UMPLE/Tilstandsdiagram/: Tilstandsmaskin.txt
UMPLE/Tilstandsdiagram/Java/: EXPO.java
UMPLE/Tilstandsdiagram/Php/: EXPO.php
UMPLE/Tilstandsdiagram/RTCpp/: CMakeLists.txt  model_Main.cpp  model_Model.h
UMPLE/Tilstandsdiagram/Sql/: model.sql
testJava/prove/src/prove109/: testKlasse.java
